--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <meta name="description" content="Description" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
-    />
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
     <link
       rel="shortcut icon"
       href="/094450aq99lukkqad3aqlt.png.icon.ico"
-      type="image/x-icon"
-    />
+      type="image/x-icon" />
     <link rel="stylesheet" href="/css/vue.css" />
   </head>
 
@@ -141,6 +139,7 @@
     <script src="/js/prism-nginx.min.js"></script>
     <script src="/js/prism-jsx.min.js"></script>
     <script src="/js/prism-tsx.min.js"></script>
+    <script src="/js/prism-git.min.js"></script>
     <!-- 图片缩放 -->
     <script src="/js/zoom-image.min.js"></script>
   </body>
