--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="app">加载中，请稍后...</div>
     <script>
       window.$docsify = {
-        basePath: "/docs/",
+        // basePath: "/docs/",
         name: "",
         //封面
         coverpage: true,
