--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         //封面
         coverpage: true,
         onlyCover: true,
-        routerMode: "hash",
+        routerMode: "history",
         subMaxLevel: 2,
         loadNavbar: true,
         auto2top: true,
